--- a/package.json
+++ b/package.json
@@ -68,8 +68,10 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "path": "^0.12.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "styled-components": "^5.1.1"
   },
   "build": {
@@ -88,13 +90,6 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true",
-      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
